# teeth-agent

./: Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
carbide_agent/: api.py  base.py  decom.py  errors.py  overlord_agent_api.py  standby.py
carbide_agent/cmd/: decom.py  standby.py
carbide_agent/tests/: api.py  base_agent.py  decom_agent.py  hardware.py  overlord_agent_api.py  standby_agent.py
scripts/: bootstrap-virtualenv.sh
teeth_agent/: api.py  base.py  decom.py  errors.py  standby.py
teeth_agent/tests/: decom.py  standby.py
