[metadata]
name = carbide-agent
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = Carbide Host Agent
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    carbide_agent

[entry_points]
console_scripts =
    carbide-standby-agent = carbide_agent.cmd.standby:run
    carbide-decom-agent = carbide_agent.cmd.decom:run
